# HHcpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
include/: HHConfig.hpp  gating-system.hpp  model.hpp  simulator.hpp  state.hpp  system.hpp  time-integrator.hpp  voltage-system.hpp
include/utils/: compartment.hpp  root-finder.hpp  sparse-system-solver.hpp
python/: bindings.cpp
src/: gating-system.cpp  main.cpp  model.cpp  simulator.cpp  time-integrator.cpp  voltage-system.cpp
src/utils/: compartment.cpp  root-finder.cpp  sparse-system-solver.cpp
tests/: heat-equation.hpp  linear-test-equation.hpp  test-HHmodel.cpp  test-compartment.cpp  test-gating-system.cpp  test-heat-equation.cpp  test-root-finder.cpp  test-sparse-system-solver.cpp  test-time-integrator.cpp  test-voltage-system.cpp
